apps/blinko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinko
  namespace: blinko
  labels:
    app: blinko
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "blinko.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 1111
      targetPort: 1111
      protocol: TCP
  selector:
    app: blinko
